k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: t4c-web
  labels:
    app.kubernetes.io/name: t4c-web
    app.kubernetes.io/part-of: t4c-web
