k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: t4c-web-service
  namespace: t4c-web
  labels:
    app.kubernetes.io/name: t4c-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: t4c-web
